[gd_scene load_steps=6 format=1]

[ext_resource path="res://themes/gui.tres" type="Theme" id=1]
[ext_resource path="res://scripts/gui/inventory.gd" type="Script" id=2]
[ext_resource path="res://fonts/segoeuisl40.fnt" type="BitmapFont" id=3]
[ext_resource path="res://themes/text30.tres" type="Theme" id=4]
[ext_resource path="res://scenes/gui/inventoryFunctions.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="tabs" type="HBoxContainer" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 46.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="menuTitle" type="Label" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 3.0
margin/right = 477.0
margin/bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Inventaire"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToLog" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 481.0
margin/top = 0.0
margin/right = 958.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Journal"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToEncyclopedia" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 962.0
margin/top = 0.0
margin/right = 1439.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Encyclop√©die"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="buttonToMap" type="Button" parent="Control/VBoxContainer/tabs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 1443.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 46.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Carte"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 50.0
margin/right = 1920.0
margin/bottom = 976.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 980.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="itemIcon" type="TextureFrame" parent="Control/VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="descriptionContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 1775.0
margin/bottom = 100.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="itemName" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer/descriptionContainer"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1671.0
margin/bottom = 40.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="itemDescription" type="RichTextLabel" parent="Control/VBoxContainer/HBoxContainer/descriptionContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 44.0
margin/right = 1671.0
margin/bottom = 100.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
__meta__ = {
"_edit_lock_": true
}

[node name="buttonsContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 1779.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 100.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="useButton" type="Button" parent="Control/VBoxContainer/HBoxContainer/buttonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 141.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Utiliser (E)"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="returnButton" type="Button" parent="Control/VBoxContainer/HBoxContainer/buttonsContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 52.0
margin/right = 141.0
margin/bottom = 100.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Retour"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="pikaunicorn" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.5
transform/pos = Vector2( 1712.33, 771.314 )
transform/rot = -6.29285
transform/scale = Vector2( 0.777185, 0.848602 )

[node name="inventoryFunctions" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToLog" to="." method="_on_buttonToLog_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToEncyclopedia" to="." method="_on_buttonToEncyclopedia_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/tabs/buttonToMap" to="." method="_on_buttonToMap_pressed"]

[connection signal="item_activated" from="Control/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]

[connection signal="item_selected" from="Control/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/buttonsContainer/useButton" to="." method="_on_useButton_pressed"]

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/buttonsContainer/returnButton" to="." method="_on_returnButton_pressed"]


